Enable giscus for the right repo
https://giscus.app

--- a/overrides/partials/comments.html
+++ b/overrides/partials/comments.html
@@ -3,10 +3,10 @@
 {% if page.meta.comments %}
   <h2 id="__comments">{{ lang.t("meta.comments") }}</h2>
   <script src="https://giscus.app/client.js"
-        data-repo="Benedicht/com.tivadar.besthttp.documentation"
+        data-repo="Benedicht/com.tivadar.best.documentation"
         data-repo-id="R_kgDOKX87BA"
         data-category="General"
-        data-category-id="DIC_kwDOKX87BM4CZnRW"
+        data-category-id="DIC_kwDOKX87BM4CZnRX"
         data-mapping="pathname"
         data-strict="0"
         data-reactions-enabled="1"
