Moved the Ultimate Bundle to the first place and made it full width to better emphasize it.

--- a/docs/assets/stylesheets/extra.css
+++ b/docs/assets/stylesheets/extra.css
@@ -70,6 +70,10 @@
     margin-right: 10px;    /* Adds right margin to all buttons except the last one */
 }
 
+.card--full-width {
+    flex: 0 0 calc(100% - 24px); /* Takes the full width minus the gap */
+}
+
 /* Styles for light theme */
 body[data-md-color-scheme="default"] .card {
     /*background-color: var(--md-primary-bg-color); /* Using the primary background color */
